--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>jsÊµÏÖwebÒ³ÃæÌ¨ÇòÓÎÏ·ÌØÐ§</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>jså®žçŽ°webé¡µé¢å°çƒæ¸¸æˆç‰¹æ•ˆ</title>
 <link href="css/zzsc.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/zzsc.js"></script>
 </head>
@@ -19,7 +19,7 @@
         </div>
     </div>
 <div style="text-align:center;clear:both">
-<p><font color="#FFFFFF">ÊÊÓÃä¯ÀÀÆ÷£ºIE8¡¢360¡¢FireFox¡¢Chrome¡¢Safari¡¢Opera¡¢°ÁÓÎ¡¢ËÑ¹·¡¢ÊÀ½çÖ®´°. </font></p><br>
+<p><font color="#FFFFFF">é€‚ç”¨æµè§ˆå™¨ï¼šIE8ã€360ã€FireFoxã€Chromeã€Safariã€Operaã€å‚²æ¸¸ã€æœç‹—ã€ä¸–ç•Œä¹‹çª—. </font></p><br>
 </div>
 </body>
 </html>
